syntax = "proto3";

package mdc.proto;

import "./selenium.proto";

message ReportData {
  ReportMeta meta = 1;
  UserAgents user_agents = 2;
  Screenshots screenshots = 3;
  Approvals approvals = 4;
}

message ReportMeta {
  string start_time_iso_utc = 1;
  string end_time_iso_utc = 2;
  uint64 duration_ms = 3;

  // Unique timestamped directory path to prevent collisions between developers.
  string remote_upload_base_dir = 4;

  // GCS bucket URL.
  string remote_upload_base_url = 5;

  // Absolute path to a local directory containing all static asset files to be uploaded to GCS.
  string local_asset_base_dir = 6;

  // Absolute path to a local directory containing all captured screenshot image files to be uploaded to GCS.
  string local_screenshot_image_base_dir = 7;

  // Absolute path to a local directory containing all diff image files to be uploaded to GCS.
  string local_diff_image_base_dir = 8;

  // Absolute path to a local directory containing all generated report files (HTML/JSON).
  string local_report_base_dir = 9;

  // TODO(acdvorak): Better names
  string local_temporary_http_dir = 10;
  uint32 local_temporary_http_port = 11;

  User user = 12;
  string host_os_name = 13;
  string cli_invocation = 14;

  DiffBase golden_diff_base = 15;
  DiffBase snapshot_diff_base = 16;
  GitStatus git_status = 17;

  LibraryVersion node_version = 18;
  LibraryVersion npm_version = 19;
  LibraryVersion mdc_version = 20;

  TestFile report_html_file = 21;
  TestFile report_json_file = 22;
  TestFile golden_json_file = 23;
}

message DiffBase {
  enum Type {
    UNKNOWN = 0;
    FILE_PATH = 1;
    PUBLIC_URL = 2;
    GIT_REVISION = 3;
  }

  Type type = 1;
  string input_string = 2;

  oneof value_oneof {
    string local_file_path = 3;
    string public_url = 4;
    GitRevision git_revision = 5;
  }

  bool is_default_local_file = 6;
}

message GitRevision {
  enum Type {
    UNKNOWN = 0;
    COMMIT = 1;
    LOCAL_BRANCH = 2;
    REMOTE_BRANCH = 3;
    REMOTE_TAG = 4;
    TRAVIS_PR = 5;
  }

  Type type = 1;
  string golden_json_file_path = 2;
  string commit = 3;
  string remote = 4;
  string branch = 5;
  string tag = 6;
  uint32 pr_number = 7;

  // "author" is the person who created the PR; "committer" is the person who created the commit.
  // E.g., if Alice creates a PR and Bob clicks "Update branch" in the GitHub UI, then
  // author = "Alice" and committer = "Bob".
  User author = 8;
  User committer = 9;
}

message User {
  string name = 1;
  string email = 2;
  string username = 3;
}

message LibraryVersion {
  string version_string = 1;
}

message UserAgents {
  repeated UserAgent all_user_agents = 1;
  repeated UserAgent runnable_user_agents = 2;
  repeated UserAgent skipped_user_agents = 3;
}

message UserAgent {
  enum FormFactorType {
    UNKNOWN = 0;
    DESKTOP = 1;
    MOBILE = 2;
  }

  enum OsVendorType {
    UNKNOWN = 0;
    WINDOWS = 1;
    MAC = 2;
    IOS = 3;
    ANDROID = 4;
  }

  enum BrowserVendorType {
    UNKNOWN = 0;
    CHROME = 1;
    FIREFOX = 2;
    SAFARI = 3;
    EDGE = 4;
    IE = 5;
  }

  enum BrowserVersionType {
    UNKNOWN = 0;
    EXACT = 1;
    LATEST = 2;
    PREVIOUS = 3;
  }

  message Navigator {
    string os_name = 1;
    string os_version = 2;
    string browser_name = 3;
    string browser_version = 4;
    string full_name = 5;
  }

  string alias = 1;

  // Parsed from `alias`
  string form_factor_name = 2;
  string os_vendor_name = 3;
  string browser_vendor_name = 4;
  string browser_version_name = 5;
  string browser_version_value = 6;

  // Parsed from `alias`
  FormFactorType form_factor_type = 7;
  OsVendorType os_vendor_type = 8;
  BrowserVendorType browser_vendor_type = 9;
  BrowserVersionType browser_version_type = 10;

  RawCapabilities desired_capabilities = 11;
  RawCapabilities actual_capabilities = 12;
  Navigator navigator = 13;

  bool is_enabled_by_cli = 14;
  bool is_available_locally = 15;
  bool is_runnable = 16;

  // Generated from `actual_capabilities`
  string image_filename_suffix = 17;

  string browser_icon_url = 18;
  string os_icon_url = 19;
}

message Screenshots {
  repeated Screenshot expected_screenshot_list = 1;
  repeated Screenshot actual_screenshot_list = 2;
  repeated Screenshot runnable_screenshot_list = 3;
  repeated Screenshot skipped_screenshot_list = 4;
  repeated Screenshot added_screenshot_list = 5;
  repeated Screenshot removed_screenshot_list = 6;
  repeated Screenshot comparable_screenshot_list = 7;
  repeated Screenshot changed_screenshot_list = 8;
  repeated Screenshot unchanged_screenshot_list = 9;

  map<string, ScreenshotList> expected_screenshot_browser_map = 10;
  map<string, ScreenshotList> actual_screenshot_browser_map = 11;
  map<string, ScreenshotList> runnable_screenshot_browser_map = 12;
  map<string, ScreenshotList> skipped_screenshot_browser_map = 13;
  map<string, ScreenshotList> added_screenshot_browser_map = 14;
  map<string, ScreenshotList> removed_screenshot_browser_map = 15;
  map<string, ScreenshotList> comparable_screenshot_browser_map = 16;
  map<string, ScreenshotList> changed_screenshot_browser_map = 17;
  map<string, ScreenshotList> unchanged_screenshot_browser_map = 18;

  map<string, ScreenshotList> expected_screenshot_page_map = 19;
  map<string, ScreenshotList> actual_screenshot_page_map = 20;
  map<string, ScreenshotList> runnable_screenshot_page_map = 21;
  map<string, ScreenshotList> skipped_screenshot_page_map = 22;
  map<string, ScreenshotList> added_screenshot_page_map = 23;
  map<string, ScreenshotList> removed_screenshot_page_map = 24;
  map<string, ScreenshotList> comparable_screenshot_page_map = 25;
  map<string, ScreenshotList> changed_screenshot_page_map = 26;
  map<string, ScreenshotList> unchanged_screenshot_page_map = 27;

  repeated string runnable_test_page_urls = 28;
  repeated string skipped_test_page_urls = 29;
  repeated string runnable_browser_icon_urls = 30;
  repeated string skipped_browser_icon_urls = 31;
  repeated string runnable_screenshot_keys = 32;
  repeated string skipped_screenshot_keys = 33;
}

message ScreenshotList {
  repeated Screenshot screenshots = 1;
}

message Screenshot {
  enum InclusionType {
    UNKNOWN = 0;
    ADD = 1;
    SKIP = 2;
    REMOVE = 3;
    COMPARE = 4;
  }

  enum CaptureState {
    UNKNOWN = 0;
    QUEUED = 1;
    SKIPPED = 2;
    RUNNING = 3;
    DIFFED = 4;
  }

  bool is_runnable = 1;
  InclusionType inclusion_type = 2;
  CaptureState capture_state = 3;
  UserAgent user_agent = 4;
  string html_file_path = 5;

  TestFile expected_html_file = 6;
  TestFile actual_html_file = 7;
  TestFile expected_image_file = 8;
  TestFile actual_image_file = 9;
  TestFile diff_image_file = 10;
  DiffImageResult diff_image_result = 11;

  uint32 retry_count = 12;
  uint32 max_retries = 13;
}

message Dimensions {
  uint64 width = 1;
  uint64 height = 2;
}

message DiffImageResult {
  TestFile diff_image_file = 1;

  Dimensions expected_image_dimensions = 2;
  Dimensions actual_image_dimensions = 3;
  Dimensions diff_image_dimensions = 4;

  // Actual number of individual pixels that are different
  double changed_pixel_count = 5;

  // 0.0 to 1.0
  double changed_pixel_fraction = 6;

  // 0.0 to 100.0
  double changed_pixel_percentage = 7;

  // Determines whether the diff pixel count is above the minimum threshold to be considered a probable "real" diff
  bool has_changed = 8;
}

message TestFile {
  string relative_path = 1;
  string absolute_path = 2;
  string public_url = 3;
}

message Approvals {
  repeated ApprovalId added_ids = 1;
  repeated ApprovalId changed_ids = 2;
  repeated ApprovalId removed_ids = 3;

  repeated Screenshot added_screenshot_list = 4;
  repeated Screenshot changed_screenshot_list = 5;
  repeated Screenshot removed_screenshot_list = 6;
}

message ApprovalId {
  string html_file_path = 1;
  string user_agent_alias = 2;
}

message GoldenSuite {
  map<string, GoldenPage> page_map = 1;
}

message GoldenPage {
  string public_url = 1;
  map<string, string> screenshots = 2;
}

message GoldenScreenshot {
  string html_file_path = 1;
  string html_file_url = 2;
  string user_agent_alias = 3;
  string screenshot_image_path = 4;
  string screenshot_image_url = 5;
}

message HbsTestPageData {
  string html_file_path = 1;
  string expected_html_file_url = 2;
  string actual_html_file_url = 3;
  repeated Screenshot screenshot_array = 4;
}

message GitStatus {
  repeated string not_added = 1;
  repeated string conflicted = 2;
  repeated string created = 3;
  repeated string deleted = 4;
  repeated string modified = 5;
  repeated string renamed = 6;
  repeated string files = 7;
}
